# alma-barcode-checks-azure-func

./: .env.template  .funcignore  .gitignore  .pylintrc  controllers.py  function_app.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml  azure-functions-prod.yml  azure-functions-stage.yml
BarcodesDuplicateScf/: __init__.py
app/: __init__.py  extensions.py
app/barcodes_duplicate_scf/: __init__.py
app/barcodes_incorrect_row_tray_scf/: __init__.py
app/barcodes_no_row_tray_scf/: __init__.py
app/barcodes_no_x_scf/: __init__.py
app/controllers/: analysis_controller.py  apikey_controller.py  area_controller.py  azuretrigger_controller.py  config_controller.py  email_controller.py  report_controller.py
app/models/: analysis_sql.py  apikey_sql.py  area_sql.py  azuretrigger_sql.py  config_sql.py  email.py  iz_sql.py  recipient_sql.py  user_sql.py
app/triggers/: iz_incorrect_row_tray.py  iz_no_row_tray.py  scf_duplicate.py  scf_incorrect_row_tray.py  scf_no_row_tray.py  scf_no_x.py  scf_withdrawn.py
application/: __init__.py  extensions.py
application/controllers/: analysis_controller.py  apikey_controller.py  area_controller.py  azuretrigger_controller.py  config_controller.py  email_controller.py  exception_controller.py  key_controller.py  report_controller.py  trigger_controller.py
application/models/: analysis_sql.py  apikey_sql.py  area_sql.py  (+8 more)
barcodes_duplicate_scf/: __init__.py
barcodes_no_x_scf/: __init__.py
shared/: __init__.py  analytics_utils.py  email_utils.py
templates/: email.html
(+13 files in other folders)
